--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "test": "jest --watch"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18"
