--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.2",
     "jest": "^29.7.0",
+    "jest-bench": "^29.4.1",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
