--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wasm"
+name = "fibonacci-rust"
 version = "0.1.0"
 authors = ["Bruno Henrique Glowaski Morais <bruno.glowaski@outlook.com>"]
 edition = "2018"
@@ -18,6 +18,8 @@ wasm-bindgen = "0.2.84"
 # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
 # code size when deploying.
 console_error_panic_hook = { version = "0.1.7", optional = true }
+num-bigint = "0.4.4"
+num-traits = "0.2.17"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.34"
